# openrouter-observer

./: .gitignore  README.md  Taskfile.yml  mypy.ini  pyproject.toml
config/: default.yaml
exports/: observer_output.jsonl
src/openrouter_observer/: config_loader.py  main.py
src/openrouter_observer/observer/: tracker.py
src/openrouter_observer/utils/: parser.py
tests/: test_sanity.py
