[project]
name = "openrouter-observer"
version = "0.1.0"
description = ""
authors = [
    {name = "Rajesh Marudhachalam",email = "rajesh.marudhachalam@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "openrouter_observer", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "0.4.4"
black = "24.4.2"
mypy = "1.10.0"
pytest = "8.2.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["__pycache__", "build", "dist", ".venv"]
lint.select = ["ALL"]
lint.ignore = [
  "D100", "D101", "D102", "D103",  # Ignore missing docstrings (can re-enable later)
  "ANN101", "ANN102",              # Ignore type hints for self/cls
]
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["openrouter_observer"]
force-sort-within-sections = true
combine-as-imports = true
lines-between-types = 1

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
